| Bug #16233 | XML: ExtractValue() fails with special characters | ||
|---|---|---|---|
| Submitted: | 5 Jan 2006 20:33 | Modified: | 12 Apr 2006 1:35 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: XML | Severity: | S3 (Non-critical) |
| Version: | 5.1.5-alpha-debug | OS: | Linux (SUSE 10.0) |
| Assigned to: | Alexander Barkov | Target Version: | |
[5 Jan 2006 20:52]
Miguel Solorzano
Welcome to the MySQL monitor. Commands end with ; or \g.
Your MySQL connection id is 1 to server version: 5.1.5-alpha-debug
Type 'help;' or '\h' for help. Type '\c' to clear the buffer.
mysql> delimiter //
mysql> CREATE PROCEDURE p2 ()
-> BEGIN
-> DECLARE p LONGTEXT CHARACTER SET UTF8 DEFAULT
-> '<Ñ><r>A</r></Ñ>';
-> SELECT EXTRACTVALUE(p,'/Ñ/r');
-> END//
Query OK, 0 rows affected (0.02 sec)
mysql> CALL p2()//
ERROR 1105 (HY000): XPATH syntax error: 'Ã/r'
mysql>
[6 Apr 2006 4:40]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4533
[11 Apr 2006 8:32]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/4771
[11 Apr 2006 8:33]
Alexander Barkov
Thanks to Svoj for review.
[11 Apr 2006 9:09]
Alexander Barkov
Fixed in 5.1.10.
[12 Apr 2006 1:35]
Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
Additional info:
Documented bugfix in 5.1.10 changelog. Closed.

Description: I use UTF8 ("SET NAMES UTF8"). I have a name Ñ (N-tilde). The ExtractValue() function calls this name a "syntax error". How to repeat: mysql> CREATE PROCEDURE p2 () -> BEGIN -> DECLARE p LONGTEXT CHARACTER SET UTF8 DEFAULT '<Ñ><r>A</r></Ñ>'; -> SELECT EXTRACTVALUE(p,'/Ñ/r'); -> END// Query OK, 0 rows affected (0.01 sec) mysql> mysql> CALL p2()// ERROR 1105 (HY000): XPATH syntax error: 'Ñ/r'